<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/principal"
    tools:context=".VentanaLista2">

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/frag_prod"
        android:name="com.hfad.marketstore.FyVFragment"
        android:layout_width="411dp"
        android:layout_height="592dp"
        android:background="@android:color/transparent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.388" />

    <Button
        android:id="@+id/btn_menu_ventana"
        android:layout_width="115dp"
        android:layout_height="49dp"
        android:text="@string/menu"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btn_info_ventana"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frag_prod" />

    <Button
        android:id="@+id/btn_info_ventana"
        android:layout_width="150dp"
        android:layout_height="49dp"
        android:text="@string/info"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btn_carrito_ventana"
        app:layout_constraintStart_toEndOf="@+id/btn_menu_ventana"
        app:layout_constraintTop_toBottomOf="@+id/frag_prod"
        tools:ignore="TextSizeCheck" />

    <Button
        android:id="@+id/btn_carrito_ventana"
        android:layout_width="115dp"
        android:layout_height="49dp"
        android:text="@string/carrito"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btn_info_ventana"
        app:layout_constraintTop_toBottomOf="@+id/frag_prod" />
</androidx.constraintlayout.widget.ConstraintLayout>