<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#202732"
    tools:context=".SoporteFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="198dp"
            android:layout_height="149dp"
            android:layout_marginTop="88dp"
            android:src="@drawable/setting_icon"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txt_configuracion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="CONFIGURACION"
            android:textColor="#FFFFFF"
            android:textSize="34sp"
            app:layout_constraintBottom_toTopOf="@+id/imageView3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:layout_width="412dp"
            android:layout_height="731dp"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <Button
                android:id="@+id/btn_msg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/enviar_mensaje" />

            <Button
                android:id="@+id/btn_logout_set"
                android:layout_width="167dp"
                android:layout_height="wrap_content"
                android:text="@string/cerrar_sesion" />

            <Button
                android:id="@+id/btn_pedidos"
                android:layout_width="167dp"
                android:layout_height="wrap_content"
                android:text="@string/ver_pedidos" />

        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>